feat: commit arguments

--- a/packages/@som/vue2/package.json
+++ b/packages/@som/vue2/package.json
@@ -8,53 +8,53 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@formily/core": "^2.0.20",
-    "@formily/element": "^2.0.20",
-    "@formily/vue": "^2.0.20",
-    "@popperjs/core": "^2.11.5",
-    "@vue/composition-api": "^1.5.0",
+    "@formily/core": "^2.2.0",
+    "@formily/element": "^2.2.0",
+    "@formily/vue": "^2.2.0",
+    "@popperjs/core": "^2.11.6",
+    "@vue/composition-api": "^1.7.0",
     "ant-design-vue": "1.7.8",
-    "core-js": "^3.22.2",
-    "d3": "^7.4.4",
+    "core-js": "^3.24.1",
+    "d3": "^7.6.1",
     "d3-org-chart": "^2.6.0",
-    "dayjs": "^1.11.1",
-    "element-ui": "^2.15.8",
+    "dayjs": "^1.11.5",
+    "element-ui": "^2.15.9",
     "javascript-stringify": "^2.1.0",
-    "nanoid": "^3.3.3",
+    "nanoid": "^4.0.0",
     "simple-lodash-template-loader": "^1.0.5",
     "uuid": "^8.3.2",
-    "vue": "^2.6.11",
+    "vue": "npm:vue@v2-latest",
     "vue-d3-org-chart": "^0.0.2",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
-    "@types/d3": "^7.1.0",
-    "@types/d3-org-chart": "^2.3.0",
-    "@types/tailwindcss": "^3.0.10",
-    "@typescript-eslint/eslint-plugin": "^5.20.0",
-    "@typescript-eslint/parser": "^5.20.0",
-    "@vue/cli-plugin-babel": "~5.0.4",
-    "@vue/cli-plugin-router": "~5.0.4",
-    "@vue/cli-plugin-typescript": "~5.0.4",
-    "@vue/cli-plugin-vuex": "~5.0.4",
-    "@vue/cli-service": "~5.0.4",
-    "@vue/eslint-config-standard": "^6.1.0",
-    "@vue/eslint-config-typescript": "^10.0.0",
-    "autoprefixer": "^10.4.5",
-    "eslint": "^8.14.0",
+    "@types/d3": "^7.4.0",
+    "@types/d3-org-chart": "^2.6.1",
+    "@types/tailwindcss": "^3.1.0",
+    "@typescript-eslint/eslint-plugin": "^5.33.1",
+    "@typescript-eslint/parser": "^5.33.1",
+    "@vue/cli-plugin-babel": "~5.0.8",
+    "@vue/cli-plugin-router": "~5.0.8",
+    "@vue/cli-plugin-typescript": "~5.0.8",
+    "@vue/cli-plugin-vuex": "~5.0.8",
+    "@vue/cli-service": "~5.0.8",
+    "@vue/eslint-config-standard": "^8.0.1",
+    "@vue/eslint-config-typescript": "^11.0.0",
+    "autoprefixer": "^10.4.8",
+    "eslint": "^8.22.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-standard": "^5.0.0",
-    "eslint-plugin-vue": "^8.7.1",
-    "postcss": "^8.4.12",
-    "prettier": "^2.6.2",
-    "prettier-plugin-tailwindcss": "^0.1.10",
-    "sass": "^1.50.1",
-    "sass-loader": "^12.6.0",
-    "tailwindcss": "^3.0.24",
-    "typescript": "~4.6.3",
-    "vue-template-compiler": "^2.6.11"
+    "eslint-plugin-vue": "^9.3.0",
+    "postcss": "^8.4.16",
+    "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.13",
+    "sass": "^1.54.4",
+    "sass-loader": "^13.0.2",
+    "tailwindcss": "^3.1.8",
+    "typescript": "~4.7.4",
+    "vue-template-compiler": "^2.7.8"
   }
 }
