--- a/apps/blog/package.json
+++ b/apps/blog/package.json
@@ -11,16 +11,16 @@
   "devDependencies": {
     "@nuxt/content": "^2.0.1",
     "@nuxtjs/color-mode": "^3.1.4",
-    "@tailwindcss/typography": "^0.5.2",
-    "nuxt": "3.0.0-rc.4",
-    "sass": "^1.53.0",
-    "tailwindcss": "^3.1.4"
+    "@tailwindcss/typography": "^0.5.4",
+    "nuxt": "npm:nuxt@rc",
+    "sass": "^1.54.5",
+    "tailwindcss": "^3.1.8"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.1.1",
-    "@fortawesome/free-brands-svg-icons": "^6.1.1",
-    "@fortawesome/free-regular-svg-icons": "^6.1.1",
-    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/fontawesome-svg-core": "^6.1.2",
+    "@fortawesome/free-brands-svg-icons": "^6.1.2",
+    "@fortawesome/free-regular-svg-icons": "^6.1.2",
+    "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/vue-fontawesome": "^3.0.1"
   }
 }
