--- a/apps/blog/package.json
+++ b/apps/blog/package.json
@@ -12,7 +12,7 @@
     "@nuxt/content": "^2.0.1",
     "@nuxtjs/color-mode": "^3.1.4",
     "@tailwindcss/typography": "^0.5.4",
-    "nuxt": "npm:nuxt@rc",
+    "nuxt": "npm:nuxt3@latest",
     "sass": "^1.54.5",
     "tailwindcss": "^3.1.8"
   },
