--- a/apps/blog/package.json
+++ b/apps/blog/package.json
@@ -21,6 +21,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.1.2",
     "@fortawesome/free-regular-svg-icons": "^6.1.2",
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
-    "@fortawesome/vue-fontawesome": "^3.0.1"
+    "@fortawesome/vue-fontawesome": "^3.0.1",
+    "lodash": "^4.17.21"
   }
 }
