--- a/apps/blog/package.json
+++ b/apps/blog/package.json
@@ -11,6 +11,8 @@
   "devDependencies": {
     "@nuxt/content": "^2.0.1",
     "@nuxtjs/color-mode": "^3.1.4",
+    "@nuxtjs/eslint-config": "^10.0.0",
+    "@nuxtjs/eslint-config-typescript": "^10.0.0",
     "@tailwindcss/typography": "^0.5.4",
     "nuxt": "npm:nuxt3@latest",
     "sass": "^1.54.5",
