--- a/apps/blog/package.json
+++ b/apps/blog/package.json
@@ -21,6 +21,7 @@
     "nuxt": "npm:nuxt3@latest",
     "pinia": "^2.0.21",
     "sass": "^1.54.5",
+    "tailwind-css-variables-theme-generator": "^0.3.2",
     "tailwindcss": "^3.1.8",
     "unplugin-icons": "^0.14.8",
     "unplugin-vue-components": "^0.22.4"
@@ -31,6 +32,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.1.2",
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/vue-fontawesome": "^3.0.1",
+    "d3-color": "^3.1.0",
     "element-plus": "^2.2.15",
     "lodash": "^4.17.21"
   }
