--- a/apps/blog/package.json
+++ b/apps/blog/package.json
@@ -8,32 +8,45 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview"
   },
+  "comment": {
+    "nuxt": "npm:nuxt3@latest"
+  },
   "devDependencies": {
     "@element-plus/icons-vue": "^2.0.9",
-    "@nuxt/content": "^2.0.1",
-    "@nuxtjs/color-mode": "^3.1.4",
-    "@nuxtjs/eslint-config": "^10.0.0",
-    "@nuxtjs/eslint-config-typescript": "^10.0.0",
+    "@nuxt/content": "^2.1.1",
+    "@nuxtjs/color-mode": "^3.1.6",
+    "@nuxtjs/eslint-config": "^11.0.0",
+    "@nuxtjs/eslint-config-typescript": "^11.0.0",
     "@nuxtjs/svg": "^0.4.0",
-    "@pinia/nuxt": "^0.4.1",
-    "@tailwindcss/typography": "^0.5.4",
-    "@vueuse/nuxt": "^9.1.1",
-    "nuxt": "npm:nuxt3@latest",
-    "pinia": "^2.0.21",
-    "sass": "^1.54.5",
-    "tailwind-css-variables-theme-generator": "^0.3.2",
+    "@pinia/nuxt": "^0.4.2",
+    "@tailwindcss/typography": "^0.5.7",
+    "@types/prettier": "^2.7.1",
+    "@typescript-eslint/eslint-plugin": "^5.38.0",
+    "@typescript-eslint/parser": "^5.38.0",
+    "@vueuse/nuxt": "^9.2.0",
+    "dotenv": "^16.0.2",
+    "eslint": "8.24.0",
+    "eslint-plugin-n": "15.3.0",
+    "eslint-plugin-promise": "6.0.1",
+    "eslint-plugin-vue": "^9.5.1",
+    "nuxt": "npm:nuxt@rc",
+    "pinia": "^2.0.22",
+    "sass": "^1.55.0",
+    "tailwind-css-variables-theme-generator": "^0.3.6",
     "tailwindcss": "^3.1.8",
-    "unplugin-icons": "^0.14.8",
-    "unplugin-vue-components": "^0.22.4"
+    "turbo": "^1.5.3",
+    "typescript": "^4.8.3",
+    "unplugin-icons": "^0.14.10",
+    "unplugin-vue-components": "^0.22.7"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.1.2",
-    "@fortawesome/free-brands-svg-icons": "^6.1.2",
-    "@fortawesome/free-regular-svg-icons": "^6.1.2",
-    "@fortawesome/free-solid-svg-icons": "^6.1.2",
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-brands-svg-icons": "^6.2.0",
+    "@fortawesome/free-regular-svg-icons": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/vue-fontawesome": "^3.0.1",
     "d3-color": "^3.1.0",
-    "element-plus": "^2.2.15",
+    "element-plus": "^2.2.17",
     "lodash": "^4.17.21"
   }
 }
