--- a/packages/@som/blog/package.json
+++ b/packages/@som/blog/package.json
@@ -14,6 +14,7 @@
     "lint": "yarn lint:js && yarn lint:style",
     "gen": "cross-env SLS_ENV=release NODE_ENV=production node ./scripts/genCfg.js",
     "deploy": "npm run gen && npm run generate && components deploy && node ./scripts/refresh-cdn-urls.js",
+    "deploy:cos": "npm run generate && node scripts/deployCos.js && node scripts/refresh-cdn-urls.js",
     "check:upgrade": "yarn upgradeInteractive --latest",
     "sls:info": "components info",
     "gen:theme": "node scripts/theme.js",
@@ -76,6 +77,7 @@
     "@babel/eslint-parser": "^7.19.1",
     "@babel/plugin-transform-runtime": "^7.19.1",
     "@babel/preset-env": "^7.19.1",
+    "@icebreakers/deploy": "^0.1.0",
     "@nuxt/postcss8": "^1.1.3",
     "@nuxt/types": "^2.15.8",
     "@nuxtjs/composition-api": "^0.33.1",
