--- a/apps/blog/package.json
+++ b/apps/blog/package.json
@@ -17,6 +17,7 @@
     "@nuxtjs/color-mode": "^3.1.6",
     "@nuxtjs/eslint-config": "^11.0.0",
     "@nuxtjs/eslint-config-typescript": "^11.0.0",
+    "@nuxtjs/supabase": "^0.1.27",
     "@nuxtjs/svg": "^0.4.0",
     "@pinia/nuxt": "^0.4.2",
     "@tailwindcss/typography": "^0.5.7",
