--- a/apps/blog/package.json
+++ b/apps/blog/package.json
@@ -39,6 +39,8 @@
     "tailwindcss": "^3.1.8",
     "turbo": "^1.5.3",
     "typescript": "^4.8.3",
+    "unplugin-auto-import": "^0.11.2",
+    "unplugin-element-plus": "^0.4.1",
     "unplugin-icons": "^0.14.10",
     "unplugin-vue-components": "^0.22.7"
   },
