--- a/apps/blog/package.json
+++ b/apps/blog/package.json
@@ -38,6 +38,7 @@
     "sass": "^1.55.0",
     "tailwind-css-variables-theme-generator": "^0.3.6",
     "tailwindcss": "^3.1.8",
+    "tencentcloud-sdk-nodejs": "^4.0.455",
     "turbo": "^1.5.3",
     "typescript": "^4.8.3",
     "unplugin-auto-import": "^0.11.2",
