--- a/apps/supabase-vue-3/package.json
+++ b/apps/supabase-vue-3/package.json
@@ -9,10 +9,23 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^1.35.7",
+    "@vueuse/core": "^9.3.0",
+    "@vueuse/integrations": "^9.3.0",
+    "element-plus": "^2.2.17",
+    "js-cookie": "^3.0.1",
+    "pinia": "^2.0.22",
     "vue": "^3.2.25"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.2",
     "@vitejs/plugin-vue": "^3.1.2",
-    "vite": "^3.1.6"
+    "postcss-scss": "^4.0.5",
+    "sass": "^1.55.0",
+    "tailwindcss": "^3.1.8",
+    "typescript": "^4.6.4",
+    "unplugin-auto-import": "^0.11.2",
+    "unplugin-vue-components": "^0.22.8",
+    "vite": "^3.1.6",
+    "vue-tsc": "^0.40.4"
   }
 }
