--- a/apps/supabase-vue-3/package.json
+++ b/apps/supabase-vue-3/package.json
@@ -15,7 +15,8 @@
     "element-plus": "^2.2.17",
     "js-cookie": "^3.0.1",
     "pinia": "^2.0.22",
-    "vue": "^3.2.25"
+    "vue": "^3.2.25",
+    "vue-router": "^4.1.5"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.2",
