feat: init project

--- a/apps/supabase-nextjs/package.json
+++ b/apps/supabase-nextjs/package.json
@@ -12,7 +12,8 @@
     "@supabase/auth-helpers-nextjs": "^0.2.9",
     "@supabase/auth-helpers-react": "^0.2.4",
     "@supabase/auth-ui-react": "^0.2.1",
-    "@supabase/supabase-js": "2.0.0-rc.10",
+    "@supabase/supabase-js": "^1.35.7",
+    "@supabase/ui": "^0.36.5",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
