--- a/apps/supabase-nextjs/package.json
+++ b/apps/supabase-nextjs/package.json
@@ -9,14 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.6",
     "@supabase/auth-helpers-nextjs": "^0.2.9",
     "@supabase/auth-helpers-react": "^0.2.4",
     "@supabase/auth-ui-react": "^0.2.1",
     "@supabase/supabase-js": "^1.35.7",
     "@supabase/ui": "^0.36.5",
+    "@types/react-redux": "^7.1.24",
+    "axios": "^1.1.2",
+    "immer": "^9.0.15",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-redux": "^8.0.4",
+    "use-immer": "^0.7.0"
   },
   "devDependencies": {
     "@types/node": "18.8.3",
