--- a/apps/supabase-nextjs/package.json
+++ b/apps/supabase-nextjs/package.json
@@ -17,6 +17,7 @@
     "@supabase/ui": "^0.36.5",
     "@types/react-redux": "^7.1.24",
     "axios": "^1.1.2",
+    "cookie": "^0.5.0",
     "immer": "^9.0.15",
     "next": "12.3.1",
     "react": "18.2.0",
@@ -25,6 +26,7 @@
     "use-immer": "^0.7.0"
   },
   "devDependencies": {
+    "@types/cookie": "^0.5.1",
     "@types/node": "18.8.3",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
