--- a/apps/supabase-vue-3/package.json
+++ b/apps/supabase-vue-3/package.json
@@ -16,17 +16,19 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/vue-fontawesome": "^3.0.1",
     "@supabase/supabase-js": "^2.0.0",
+    "@tanstack/vue-query": "^4.10.3",
     "@vueuse/components": "^9.3.0",
     "@vueuse/core": "^9.3.0",
     "@vueuse/integrations": "^9.3.0",
     "element-plus": "^2.2.18",
     "js-cookie": "^3.0.1",
     "pinia": "^2.0.23",
+    "swiper": "^8.4.4",
     "vue": "^3.2.25",
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
-    "@icebreakers/deploy": "^0.1.0",
+    "@icebreakers/deploy": "^0.1.1",
     "@tailwindcss/typography": "^0.5.7",
     "@types/js-cookie": "^3.0.2",
     "@vitejs/plugin-vue": "^3.1.2",
@@ -35,7 +37,6 @@
     "sass": "^1.55.0",
     "tailwind-css-variables-theme-generator": "^0.3.8",
     "tailwindcss": "^3.1.8",
-    "tencentcloud-sdk-nodejs": "^4.0.459",
     "typescript": "^4.6.4",
     "unplugin-auto-import": "^0.11.2",
     "unplugin-icons": "^0.14.11",
