--- a/apps/supabase-vue-3/package.json
+++ b/apps/supabase-vue-3/package.json
@@ -24,6 +24,7 @@
     "js-cookie": "^3.0.1",
     "pinia": "^2.0.23",
     "swiper": "^8.4.4",
+    "validator": "^13.7.0",
     "vue": "^3.2.25",
     "vue-router": "^4.1.5"
   },
@@ -31,6 +32,7 @@
     "@icebreakers/deploy": "^0.1.1",
     "@tailwindcss/typography": "^0.5.7",
     "@types/js-cookie": "^3.0.2",
+    "@types/validator": "^13.7.7",
     "@vitejs/plugin-vue": "^3.1.2",
     "postcss": "^8.4.18",
     "postcss-scss": "^4.0.5",
