--- a/apps/supabase-vue-3/package.json
+++ b/apps/supabase-vue-3/package.json
@@ -16,23 +16,24 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/vue-fontawesome": "^3.0.1",
     "@supabase/supabase-js": "^2.0.0",
-    "@tanstack/vue-query": "^4.10.3",
-    "@vueuse/components": "^9.3.0",
-    "@vueuse/core": "^9.3.0",
-    "@vueuse/integrations": "^9.3.0",
+    "@tanstack/vue-query": "^4.12.0",
+    "@vueuse/components": "^9.3.1",
+    "@vueuse/core": "^9.3.1",
+    "@vueuse/integrations": "^9.3.1",
+    "axios": "^1.1.3",
     "element-plus": "^2.2.18",
     "js-cookie": "^3.0.1",
     "pinia": "^2.0.23",
     "swiper": "^8.4.4",
     "validator": "^13.7.0",
-    "vue": "^3.2.25",
+    "vue": "^3.2.41",
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
     "@icebreakers/deploy": "^0.1.1",
     "@tailwindcss/typography": "^0.5.7",
     "@types/js-cookie": "^3.0.2",
-    "@types/validator": "^13.7.7",
+    "@types/validator": "^13.7.8",
     "@vitejs/plugin-vue": "^3.1.2",
     "postcss": "^8.4.18",
     "postcss-scss": "^4.0.5",
@@ -41,9 +42,9 @@
     "tailwindcss": "^3.1.8",
     "typescript": "^4.6.4",
     "unplugin-auto-import": "^0.11.2",
-    "unplugin-icons": "^0.14.11",
+    "unplugin-icons": "^0.14.12",
     "unplugin-vue-components": "^0.22.8",
     "vite": "^3.1.8",
-    "vue-tsc": "^1.0.7"
+    "vue-tsc": "^1.0.8"
   }
 }
