feat: login commit

--- a/apps/supabase-vue-3/package.json
+++ b/apps/supabase-vue-3/package.json
@@ -10,6 +10,7 @@
     "deploy": "node scripts/deploy.cjs"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.0.10",
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-brands-svg-icons": "^6.2.0",
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
