--- a/apps/supabase-vue-3/package.json
+++ b/apps/supabase-vue-3/package.json
@@ -37,6 +37,7 @@
     "@types/js-cookie": "^3.0.2",
     "@types/validator": "^13.7.8",
     "@vitejs/plugin-vue": "^3.1.2",
+    "@vitejs/plugin-vue-jsx": "^2.0.1",
     "postcss": "^8.4.18",
     "postcss-scss": "^4.0.5",
     "sass": "^1.55.0",
