--- a/apps/supabase-vue-3/package.json
+++ b/apps/supabase-vue-3/package.json
@@ -25,6 +25,8 @@
     "axios": "^1.1.3",
     "element-plus": "^2.2.18",
     "js-cookie": "^3.0.1",
+    "nanoid": "^4.0.0",
+    "path-browserify": "^1.0.1",
     "pinia": "^2.0.23",
     "swiper": "^8.4.4",
     "validator": "^13.7.0",
@@ -35,6 +37,7 @@
     "@icebreakers/deploy": "^0.1.1",
     "@tailwindcss/typography": "^0.5.7",
     "@types/js-cookie": "^3.0.2",
+    "@types/path-browserify": "^1.0.0",
     "@types/validator": "^13.7.8",
     "@vitejs/plugin-vue": "^3.1.2",
     "@vitejs/plugin-vue-jsx": "^2.0.1",
