--- a/packages/@som/vue2/package.json
+++ b/packages/@som/vue2/package.json
@@ -8,22 +8,22 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@formily/core": "^2.2.0",
-    "@formily/element": "^2.2.0",
-    "@formily/vue": "^2.2.0",
+    "@formily/core": "^2.2.8",
+    "@formily/element": "^2.2.8",
+    "@formily/vue": "^2.2.8",
     "@popperjs/core": "^2.11.6",
-    "@vue/composition-api": "^1.7.0",
+    "@vue/composition-api": "^1.7.1",
     "ant-design-vue": "1.7.8",
-    "core-js": "^3.24.1",
+    "core-js": "^3.25.5",
     "d3": "^7.6.1",
     "d3-org-chart": "^2.6.0",
     "dayjs": "^1.11.5",
-    "element-ui": "^2.15.9",
+    "element-ui": "^2.15.10",
     "javascript-stringify": "^2.1.0",
     "nanoid": "^4.0.0",
     "simple-lodash-template-loader": "^1.0.5",
-    "uuid": "^8.3.2",
-    "vue": "npm:vue@v2-latest",
+    "uuid": "^9.0.0",
+    "vue": "^2.7.13",
     "vue-d3-org-chart": "^0.0.2",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
@@ -32,29 +32,29 @@
     "@types/d3": "^7.4.0",
     "@types/d3-org-chart": "^2.6.1",
     "@types/tailwindcss": "^3.1.0",
-    "@typescript-eslint/eslint-plugin": "^5.33.1",
-    "@typescript-eslint/parser": "^5.33.1",
+    "@typescript-eslint/eslint-plugin": "^5.40.1",
+    "@typescript-eslint/parser": "^5.40.1",
     "@vue/cli-plugin-babel": "~5.0.8",
     "@vue/cli-plugin-router": "~5.0.8",
     "@vue/cli-plugin-typescript": "~5.0.8",
     "@vue/cli-plugin-vuex": "~5.0.8",
     "@vue/cli-service": "~5.0.8",
     "@vue/eslint-config-standard": "^8.0.1",
-    "@vue/eslint-config-typescript": "^11.0.0",
-    "autoprefixer": "^10.4.8",
-    "eslint": "^8.22.0",
+    "@vue/eslint-config-typescript": "^11.0.2",
+    "autoprefixer": "^10.4.12",
+    "eslint": "^8.25.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-promise": "^6.1.0",
     "eslint-plugin-standard": "^5.0.0",
-    "eslint-plugin-vue": "^9.3.0",
-    "postcss": "^8.4.16",
+    "eslint-plugin-vue": "^9.6.0",
+    "postcss": "^8.4.18",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
-    "sass": "^1.54.4",
-    "sass-loader": "^13.0.2",
+    "sass": "^1.55.0",
+    "sass-loader": "^13.1.0",
     "tailwindcss": "^3.1.8",
     "typescript": "~4.7.4",
-    "vue-template-compiler": "^2.7.8"
+    "vue-template-compiler": "^2.7.13"
   }
 }
