--- a/packages/@som/vue2/package.json
+++ b/packages/@som/vue2/package.json
@@ -8,11 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@floating-ui/dom": "^1.0.2",
     "@formily/core": "^2.2.8",
     "@formily/element": "^2.2.8",
     "@formily/vue": "^2.2.8",
     "@popperjs/core": "^2.11.6",
     "@vue/composition-api": "^1.7.1",
+    "@vueuse/components": "^9.3.0",
     "ant-design-vue": "1.7.8",
     "core-js": "^3.25.5",
     "d3": "^7.6.1",
