--- a/packages/@som/vue2/package.json
+++ b/packages/@som/vue2/package.json
@@ -27,6 +27,7 @@
     "uuid": "^9.0.0",
     "vue": "^2.7.13",
     "vue-d3-org-chart": "^0.0.2",
+    "vue-demi": "^0.13.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
@@ -57,6 +58,7 @@
     "sass-loader": "^13.1.0",
     "tailwindcss": "^3.1.8",
     "typescript": "~4.7.4",
+    "vite": "^3.1.8",
     "vue-template-compiler": "^2.7.13"
   }
 }
