--- a/packages/@som/vue2/package.json
+++ b/packages/@som/vue2/package.json
@@ -63,6 +63,7 @@
     "tailwindcss": "^3.2.1",
     "typescript": "~4.7.4",
     "vite": "^3.1.8",
-    "vue-template-compiler": "^2.7.13"
+    "vue-template-compiler": "^2.7.13",
+    "@volar-plugins/vetur": "latest"
   }
 }
