--- a/packages/@som/vue2/package.json
+++ b/packages/@som/vue2/package.json
@@ -41,6 +41,7 @@
     "@types/tailwindcss": "^3.1.0",
     "@typescript-eslint/eslint-plugin": "^5.40.1",
     "@typescript-eslint/parser": "^5.40.1",
+    "@volar-plugins/vetur": "latest",
     "@vue/cli-plugin-babel": "~5.0.8",
     "@vue/cli-plugin-router": "~5.0.8",
     "@vue/cli-plugin-typescript": "~5.0.8",
@@ -50,8 +51,10 @@
     "@vue/eslint-config-typescript": "^11.0.2",
     "autoprefixer": "^10.4.12",
     "eslint": "^8.26.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.0",
     "eslint-plugin-standard": "^5.0.0",
     "eslint-plugin-vue": "^9.6.0",
@@ -63,7 +66,6 @@
     "tailwindcss": "^3.2.1",
     "typescript": "~4.7.4",
     "vite": "^3.1.8",
-    "vue-template-compiler": "^2.7.13",
-    "@volar-plugins/vetur": "latest"
+    "vue-template-compiler": "^2.7.13"
   }
 }
