--- a/packages/@som/vue2/package.json
+++ b/packages/@som/vue2/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "build:lib": "vite build"
   },
   "dependencies": {
     "@floating-ui/dom": "^1.0.2",
@@ -66,6 +67,7 @@
     "tailwindcss": "^3.2.1",
     "typescript": "~4.7.4",
     "vite": "^3.1.8",
+    "vite-plugin-vue2": "^2.0.2",
     "vue-template-compiler": "^2.7.13"
   }
 }
