--- a/packages/@som/vue2/src/components/Sheet/package.json
+++ b/packages/@som/vue2/src/components/Sheet/package.json
@@ -1,9 +1,32 @@
 {
+  "name": "vue-dom-sheet",
+  "version": "1.0.0",
+  "description": "",
+  "type": "module",
+  "files": [
+    "dist"
+  ],
+  "main": "./dist/vue-dom-sheet.umd.cjs",
+  "module": "./dist/vue-dom-sheet.js",
+  "scripts": {
+    "dev": "vite",
+    "build": "vue-tsc --noEmit && vite build",
+    "preview": "vite preview"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "vue-demi": "latest"
+    "@floating-ui/dom": "^1.0.3",
+    "@vueuse/core": "^9.3.1",
+    "column-resizer": "^1.3.6",
+    "dayjs": "^1.11.6",
+    "lodash-es": "^4.17.21",
+    "vue-demi": "latest",
+    "vue-virtual-scroll-list": "^2.3.4"
   },
   "peerDependencies": {
-    "@vue/composition-api": "^1.7.1",
+    "@vue/composition-api": "^1.0.0",
     "vue": "^2.0.0 || >=3.0.0"
   },
   "peerDependenciesMeta": {
@@ -12,6 +35,10 @@
     }
   },
   "devDependencies": {
-    "vue": "^2.6.0" 
+    "@vitejs/plugin-vue": "^3.1.2",
+    "@vitejs/plugin-vue-jsx": "^2.0.1",
+    "@vue/composition-api": "^1.7.1",
+    "vite": "^3.1.8",
+    "vue": "^2.6.0"
   }
 }
