--- a/packages/@som/vue2/src/components/Sheet/package.json
+++ b/packages/@som/vue2/src/components/Sheet/package.json
@@ -18,12 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "@floating-ui/dom": "^1.0.3",
-    "@vueuse/core": "^9.3.1",
-    "column-resizer": "^1.3.6",
-    "dayjs": "^1.11.6",
-    "lodash-es": "^4.17.21",
-    "vue-demi": "latest",
-    "vue-virtual-scroll-list": "^2.3.4"
+    "vue-demi": "latest"
   },
   "peerDependencies": {
     "@vue/composition-api": "^1.0.0",
@@ -35,6 +30,11 @@
     }
   },
   "devDependencies": {
+    "vue-fragment": "^1.6.0",
+    "@vueuse/core": "^9.3.1",
+    "column-resizer": "^1.3.6",
+    "dayjs": "^1.11.6",
+    "lodash-es": "^4.17.21",
     "@vitejs/plugin-vue": "^3.1.2",
     "@vitejs/plugin-vue-jsx": "^2.0.1",
     "@vue/composition-api": "^1.7.1",
