--- a/packages/@som/vue2/package.json
+++ b/packages/@som/vue2/package.json
@@ -70,6 +70,7 @@
     "typescript": "~4.7.4",
     "vite": "^3.1.8",
     "vite-plugin-vue2": "^2.0.2",
-    "vue-template-compiler": "^2.7.13"
+    "vue-template-compiler": "^2.7.13",
+    "vue-tsc": "^1.0.9"
   }
 }
