--- a/packages/@som/vue2/src/components/Sheet/package.json
+++ b/packages/@som/vue2/src/components/Sheet/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-dom-sheet",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
   "type": "module",
   "files": [
@@ -11,6 +11,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
+    "build:types": "tsc --emitDeclarationOnly",
     "preview": "vite preview"
   },
   "keywords": [],
@@ -34,15 +35,18 @@
     "registry": "https://registry.npmjs.org"
   },
   "devDependencies": {
-    "vue-fragment": "^1.6.0",
+    "@vitejs/plugin-vue": "^3.1.2",
+    "@vitejs/plugin-vue-jsx": "^2.0.1",
+    "@vue/composition-api": "^1.7.1",
     "@vueuse/core": "^9.3.1",
     "column-resizer": "^1.3.6",
     "dayjs": "^1.11.6",
     "lodash-es": "^4.17.21",
-    "@vitejs/plugin-vue": "^3.1.2",
-    "@vitejs/plugin-vue-jsx": "^2.0.1",
-    "@vue/composition-api": "^1.7.1",
+    "sass": "^1.55.0",
     "vite": "^3.1.8",
-    "vue": "^2.6.0"
+    "vite-plugin-vue2": "^2.0.2",
+    "vue": "^2.6.0",
+    "vue-fragment": "^1.6.0",
+    "vue-tsc": "^1.0.9"
   }
 }
