--- a/packages/@som/vue2/src/components/Sheet/package.json
+++ b/packages/@som/vue2/src/components/Sheet/package.json
@@ -10,7 +10,7 @@
   "module": "./dist/vue-dom-sheet.js",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
+    "build2": "npx vue-demi-switch 2 && vue-tsc --noEmit && vite build",
     "build:types": "tsc --emitDeclarationOnly",
     "preview": "vite preview"
   },
@@ -44,6 +44,7 @@
     "lodash-es": "^4.17.21",
     "sass": "^1.55.0",
     "vite": "^3.1.8",
+    "vite-plugin-dts": "^1.6.6",
     "vite-plugin-vue2": "^2.0.2",
     "vue": "^2.6.0",
     "vue-fragment": "^1.6.0",
