--- a/packages/@som/next-app/package.json
+++ b/packages/@som/next-app/package.json
@@ -5,19 +5,22 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "cp-pdf": "node scripts/pdf.js"
   },
   "dependencies": {
-    "next": "12.0.10",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "next": "13.0.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-pdf": "^6.0.2"
   },
   "devDependencies": {
-    "@types/node": "17.0.16",
-    "@types/react": "17.0.39",
-    "eslint": "8.8.0",
-    "eslint-config-next": "12.0.10",
+    "@types/node": "18.11.9",
+    "@types/react": "18.0.25",
+    "@types/react-pdf": "^5.7.4",
+    "eslint": "8.27.0",
+    "eslint-config-next": "13.0.2",
     "sass": "^1.49.7",
-    "typescript": "4.5.5"
+    "typescript": "4.8.4"
   }
 }
