--- a/packages/@som/react-app/package.json
+++ b/packages/@som/react-app/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "5.0.0",
     "eslint-plugin-react": "^7.28.0",
+    "less": "^4.1.3",
     "react-scripts": "5.0.0",
     "sass": "^1.49.7",
     "typescript": "^4.5.5"
