--- a/apps/blog/package.json
+++ b/apps/blog/package.json
@@ -15,47 +15,47 @@
   "devDependencies": {
     "@element-plus/icons-vue": "^2.0.10",
     "@icebreakers/deploy": "^0.1.1",
-    "@nuxt/content": "^2.1.1",
+    "@nuxt/content": "^2.2.2",
     "@nuxtjs/color-mode": "^3.1.8",
-    "@nuxtjs/eslint-config": "^11.0.0",
-    "@nuxtjs/eslint-config-typescript": "^11.0.0",
-    "@nuxtjs/supabase": "^0.1.28",
+    "@nuxtjs/eslint-config": "^12.0.0",
+    "@nuxtjs/eslint-config-typescript": "^12.0.0",
+    "@nuxtjs/supabase": "^0.3.0",
     "@nuxtjs/svg": "^0.4.0",
-    "@nuxtjs/tailwindcss": "^5.3.5",
-    "@pinia/nuxt": "^0.4.3",
-    "@tailwindcss/typography": "^0.5.7",
+    "@nuxtjs/tailwindcss": "^6.1.3",
+    "@pinia/nuxt": "^0.4.5",
+    "@tailwindcss/typography": "^0.5.8",
     "@types/prettier": "^2.7.1",
-    "@typescript-eslint/eslint-plugin": "^5.40.0",
-    "@typescript-eslint/parser": "^5.40.0",
-    "@vueuse/nuxt": "^9.2.0",
+    "@typescript-eslint/eslint-plugin": "^5.44.0",
+    "@typescript-eslint/parser": "^5.44.0",
+    "@vueuse/nuxt": "^9.6.0",
     "dotenv": "^16.0.3",
-    "eslint": "8.25.0",
-    "eslint-plugin-n": "15.3.0",
-    "eslint-plugin-promise": "6.1.0",
-    "eslint-plugin-vue": "^9.5.1",
-    "nuxt": "npm:nuxt@rc",
-    "pinia": "^2.0.23",
-    "sass": "^1.55.0",
-    "tailwind-css-variables-theme-generator": "^0.3.6",
-    "tailwindcss": "^3.1.8",
-    "tencentcloud-sdk-nodejs": "^4.0.459",
-    "typescript": "^4.8.3",
-    "unplugin-auto-import": "^0.11.2",
+    "eslint": "8.28.0",
+    "eslint-plugin-n": "15.5.1",
+    "eslint-plugin-promise": "6.1.1",
+    "eslint-plugin-vue": "^9.7.0",
+    "nuxt": "^3.0.0",
+    "pinia": "^2.0.25",
+    "sass": "^1.56.1",
+    "tailwind-css-variables-theme-generator": "^0.3.8",
+    "tailwindcss": "^3.2.4",
+    "tencentcloud-sdk-nodejs": "^4.0.487",
+    "typescript": "^4.9.3",
+    "unplugin-auto-import": "^0.11.5",
     "unplugin-element-plus": "^0.4.1",
-    "unplugin-icons": "^0.14.10",
-    "unplugin-vue-components": "^0.22.7"
+    "unplugin-icons": "^0.14.14",
+    "unplugin-vue-components": "^0.22.11"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.2.0",
-    "@fortawesome/free-brands-svg-icons": "^6.2.0",
-    "@fortawesome/free-regular-svg-icons": "^6.2.0",
-    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-brands-svg-icons": "^6.2.1",
+    "@fortawesome/free-regular-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/vue-fontawesome": "^3.0.1",
-    "@supabase/supabase-js": "^1.35.7",
-    "@tanstack/vue-query": "^4.10.3",
-    "@vueuse/core": "^9.3.0",
+    "@supabase/supabase-js": "^2.1.1",
+    "@tanstack/vue-query": "^4.17.0",
+    "@vueuse/core": "^9.6.0",
     "d3-color": "^3.1.0",
-    "element-plus": "^2.2.18",
+    "element-plus": "^2.2.22",
     "lodash": "^4.17.21"
   }
 }
