--- a/apps/blog-new/package.json
+++ b/apps/blog-new/package.json
@@ -8,6 +8,14 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "nuxt": "^3.3.1"
+    "@nuxt/content": "^2.5.2",
+    "@nuxtjs/eslint-module": "^4.0.2",
+    "@nuxtjs/tailwindcss": "^6.6.4",
+    "@pinia/nuxt": "^0.4.7",
+    "eslint": "^8.36.0",
+    "nuxt": "3.3.1"
+  },
+  "dependencies": {
+    "pinia": "^2.0.33"
   }
 }
