chore: upgrade deps

--- a/packages/@som/blog/package.json
+++ b/packages/@som/blog/package.json
@@ -14,7 +14,7 @@
     "lint": "yarn lint:js && yarn lint:style",
     "gen": "cross-env SLS_ENV=release NODE_ENV=production node ./scripts/genCfg.js",
     "deploy": "npm run gen && npm run generate && components deploy && node ./scripts/refresh-cdn-urls.js",
-    "deploy:cos": "npm run generate && node scripts/deployCos.js && node scripts/refresh-cdn-urls.js",
+    "deploy:cos": "npm run generate && ice-deploy -c --dir docs",
     "check:upgrade": "yarn upgradeInteractive --latest",
     "sls:info": "components info",
     "gen:theme": "node scripts/theme.js",
@@ -22,36 +22,36 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.21.0",
-    "@fortawesome/fontawesome-svg-core": "6.3.0",
-    "@fortawesome/free-brands-svg-icons": "^6.3.0",
-    "@fortawesome/free-regular-svg-icons": "^6.3.0",
-    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/fontawesome-svg-core": "6.4.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/vue-fontawesome": "^2.0.9",
     "@nuxt/content": "^1.15.1",
     "@nuxtjs/feed": "^2.0.0",
     "@nuxtjs/proxy": "^2.1.0",
     "@nuxtjs/sitemap": "^2.4.0",
     "@nuxtjs/tailwindcss": "^5.3.3",
-    "@popperjs/core": "^2.11.6",
+    "@popperjs/core": "^2.11.7",
     "@tailwindcss/typography": "^0.5.9",
     "@types/qrcode": "^1.5.0",
     "ansicolor": "^1.1.100",
     "axios": "^0.27.2",
     "copy-text-to-clipboard": "^3.1.0",
-    "core-js": "^3.29.1",
-    "d3": "^7.8.2",
+    "core-js": "^3.30.0",
+    "d3": "^7.8.4",
     "dayjs": "^1.11.7",
-    "dompurify": "^2.4.3",
+    "dompurify": "^3.0.1",
     "dplayer": "^1.27.1",
-    "echarts": "^5.4.1",
+    "echarts": "^5.4.2",
     "element-ui": "^2.15.13",
-    "eruda": "^2.11.3",
+    "eruda": "^3.0.0",
     "file-saver": "^2.0.5",
-    "gemoji": "^7.1.0",
+    "gemoji": "^8.1.0",
     "github-markdown-css": "^5.2.0",
     "github-repository-distributor": "^1.1.1",
     "gsap": "^3.11.5",
-    "is-mobile": "^3.1.1",
+    "is-mobile": "^4.0.0",
     "js-base64": "^3.7.5",
     "js-cookie": "^3.0.1",
     "jszip": "^3.10.1",
@@ -63,7 +63,7 @@
     "sitemap": "^7.1.1",
     "svg4everybody": "^2.1.9",
     "swiper": "8.4.5",
-    "uuid": "^8.3.2",
+    "uuid": "^9.0.0",
     "vant": "^2.12.39",
     "vue-aplayer": "^1.6.1",
     "vue-echarts": "6.5.4",
@@ -72,11 +72,11 @@
     "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.21.3",
+    "@babel/core": "^7.21.4",
     "@babel/eslint-parser": "^7.21.3",
-    "@babel/plugin-transform-runtime": "^7.21.0",
-    "@babel/preset-env": "^7.20.2",
-    "@icebreakers/deploy": "^0.1.1",
+    "@babel/plugin-transform-runtime": "^7.21.4",
+    "@babel/preset-env": "^7.21.4",
+    "@icebreakers/deploy": "^0.1.4",
     "@nuxt/postcss8": "^1.1.3",
     "@nuxt/types": "^2.16.3",
     "@nuxtjs/composition-api": "^0.33.1",
@@ -93,32 +93,32 @@
     "cos-nodejs-sdk-v5": "^2.11.19",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
-    "eslint": "^8.36.0",
+    "eslint": "^8.38.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-nuxt": "^4.0.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "glob": "^8.0.3",
+    "glob": "^10.0.0",
     "klaw": "^4.1.0",
     "less": "^4.1.3",
     "less-loader": "^7.0.0",
     "postcss": "^8.4.21",
-    "prettier": "^2.8.6",
-    "prettier-plugin-tailwindcss": "^0.2.5",
+    "prettier": "^2.8.7",
+    "prettier-plugin-tailwindcss": "^0.2.7",
     "reading-time": "^1.5.0",
-    "sass": "1.59.3",
+    "sass": "1.62.0",
     "sass-loader": "^10.0.0",
     "serverless-config-generator": "^1.1.1",
     "serverless-layer-deployer": "^0.3.0",
     "speed-measure-webpack-plugin": "^1.5.0",
-    "stylelint": "^15.3.0",
+    "stylelint": "^15.4.0",
     "stylelint-config-prettier": "^9.0.5",
-    "stylelint-config-recommended-scss": "^9.0.1",
-    "stylelint-config-standard": "^31.0.0",
-    "stylelint-scss": "^4.5.0",
+    "stylelint-config-recommended-scss": "^10.0.0",
+    "stylelint-config-standard": "^32.0.0",
+    "stylelint-scss": "^4.6.0",
     "tailwind-config-viewer": "^1.7.2",
     "tailwind-css-variables-theme-generator": "^0.3.8",
-    "tailwindcss": "^3.2.7",
-    "tencentcloud-sdk-nodejs": "^4.0.565",
+    "tailwindcss": "^3.3.1",
+    "tencentcloud-sdk-nodejs": "^4.0.579",
     "worker-loader": "^3.0.8"
   }
 }
