--- a/packages/@som/vue2/package.json
+++ b/packages/@som/vue2/package.json
@@ -9,30 +9,31 @@
     "build:lib": "vite build"
   },
   "dependencies": {
-    "@floating-ui/dom": "^1.0.9",
-    "@formily/core": "^2.2.14",
-    "@formily/element": "^2.2.14",
-    "@formily/vue": "^2.2.14",
-    "@popperjs/core": "^2.11.6",
-    "@virtual-list/vue": "^1.1.9",
+    "@floating-ui/dom": "^1.2.8",
+    "@formily/core": "^2.2.24",
+    "@formily/element": "^2.2.24",
+    "@formily/vue": "^2.2.24",
+    "@popperjs/core": "^2.11.7",
+    "@virtual-list/vue": "^1.2.0",
     "@vue/composition-api": "^1.7.1",
-    "@vueuse/components": "^9.6.0",
+    "@vueuse/components": "^10.1.2",
+    "@vueuse/core": "^10.1.2",
     "ant-design-vue": "1.7.8",
-    "column-resizer": "^1.3.6",
-    "core-js": "^3.26.1",
-    "d3": "^7.7.0",
-    "d3-org-chart": "^2.6.0",
+    "column-resizer": "^1.4.0",
+    "core-js": "^3.30.2",
+    "d3": "^7.8.4",
+    "d3-org-chart": "^2.7.0",
     "dayjs": "^1.11.7",
-    "element-ui": "^2.15.12",
+    "element-ui": "^2.15.13",
     "javascript-stringify": "^2.1.0",
     "lodash-es": "^4.17.21",
-    "nanoid": "^4.0.0",
+    "nanoid": "^4.0.2",
     "simple-lodash-template-loader": "^1.0.5",
     "uuid": "^9.0.0",
     "vue": "^2.7.13",
     "vue-d3-org-chart": "^0.0.2",
-    "vue-demi": "^0.13.11",
-    "vue-dom-sheet": "^0.2.2",
+    "vue-demi": "^0.14.5",
+    "vue-dom-sheet": "^0.3.10",
     "vue-fragment": "^1.6.0",
     "vue-router": "^3.2.0",
     "vue-virtual-scroll-list": "^2.3.4",
@@ -40,11 +41,11 @@
   },
   "devDependencies": {
     "@types/d3": "^7.4.0",
-    "@types/d3-org-chart": "^2.6.2",
-    "@types/lodash-es": "^4.17.6",
+    "@types/d3-org-chart": "^2.6.3",
+    "@types/lodash-es": "^4.17.7",
     "@types/tailwindcss": "^3.1.0",
-    "@typescript-eslint/eslint-plugin": "^5.46.0",
-    "@typescript-eslint/parser": "^5.46.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.7",
+    "@typescript-eslint/parser": "^5.59.7",
     "@volar-plugins/vetur": "latest",
     "@vue/cli-plugin-babel": "~5.0.8",
     "@vue/cli-plugin-router": "~5.0.8",
@@ -52,26 +53,26 @@
     "@vue/cli-plugin-vuex": "~5.0.8",
     "@vue/cli-service": "~5.0.8",
     "@vue/eslint-config-standard": "^8.0.1",
-    "@vue/eslint-config-typescript": "^11.0.2",
-    "autoprefixer": "^10.4.12",
-    "eslint": "^8.29.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
+    "@vue/eslint-config-typescript": "^11.0.3",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.41.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.0",
     "eslint-plugin-standard": "^5.0.0",
-    "eslint-plugin-vue": "^9.8.0",
-    "postcss": "^8.4.19",
-    "prettier": "^2.8.1",
-    "prettier-plugin-tailwindcss": "^0.2.1",
-    "sass": "^1.56.2",
-    "sass-loader": "^13.2.0",
-    "tailwindcss": "^3.2.4",
-    "typescript": "~4.9.4",
-    "vite": "^3.1.8",
-    "vite-plugin-vue2": "^2.0.2",
+    "eslint-plugin-vue": "^9.14.0",
+    "postcss": "^8.4.23",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.3.0",
+    "sass": "^1.62.1",
+    "sass-loader": "^13.3.0",
+    "tailwindcss": "^3.3.2",
+    "typescript": "~5.0.4",
+    "vite": "^4.3.8",
+    "vite-plugin-vue2": "^2.0.3",
     "vue-template-compiler": "^2.7.14",
-    "vue-tsc": "^1.0.12"
+    "vue-tsc": "^1.6.5"
   }
 }
