feat: try upgrade deps

--- a/apps/blog/package.json
+++ b/apps/blog/package.json
@@ -7,6 +7,7 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
+    "postinstall": "nuxt prepare",
     "deploy": "node scripts/deploy.js"
   },
   "comment": {
@@ -14,48 +15,48 @@
   },
   "devDependencies": {
     "@element-plus/icons-vue": "^2.1.0",
-    "@icebreakers/deploy": "^0.1.1",
-    "@nuxt/content": "^2.5.2",
+    "@icebreakers/deploy": "^0.1.4",
+    "@nuxt/content": "^2.6.0",
     "@nuxtjs/color-mode": "^3.2.0",
     "@nuxtjs/eslint-config": "^12.0.0",
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
-    "@nuxtjs/supabase": "^0.3.1",
+    "@nuxtjs/supabase": "^0.3.5",
     "@nuxtjs/svg": "^0.4.0",
-    "@nuxtjs/tailwindcss": "^6.6.4",
-    "@pinia/nuxt": "^0.4.7",
+    "@nuxtjs/tailwindcss": "^6.7.0",
+    "@pinia/nuxt": "^0.4.11",
     "@tailwindcss/typography": "^0.5.9",
     "@types/prettier": "^2.7.2",
-    "@typescript-eslint/eslint-plugin": "^5.56.0",
-    "@typescript-eslint/parser": "^5.56.0",
-    "@vueuse/nuxt": "^9.13.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.7",
+    "@typescript-eslint/parser": "^5.59.7",
+    "@vueuse/nuxt": "^10.1.2",
     "dotenv": "^16.0.3",
-    "eslint": "8.36.0",
-    "eslint-plugin-n": "15.6.1",
+    "eslint": "8.41.0",
+    "eslint-plugin-n": "16.0.0",
     "eslint-plugin-promise": "6.1.1",
-    "eslint-plugin-vue": "^9.9.0",
-    "nuxt": "^3.3.1",
-    "pinia": "^2.0.33",
-    "sass": "^1.59.3",
+    "eslint-plugin-vue": "^9.14.0",
+    "nuxt": "^3.5.1",
+    "pinia": "^2.1.3",
+    "sass": "^1.62.1",
     "tailwind-css-variables-theme-generator": "^0.3.8",
-    "tailwindcss": "^3.2.7",
-    "tencentcloud-sdk-nodejs": "^4.0.564",
-    "typescript": "^5.0.2",
-    "unplugin-auto-import": "^0.15.1",
-    "unplugin-element-plus": "^0.7.0",
-    "unplugin-icons": "^0.15.3",
+    "tailwindcss": "^3.3.2",
+    "tencentcloud-sdk-nodejs": "^4.0.607",
+    "typescript": "^5.0.4",
+    "unplugin-auto-import": "^0.16.2",
+    "unplugin-element-plus": "^0.7.1",
+    "unplugin-icons": "^0.16.1",
     "unplugin-vue-components": "^0.24.1"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.3.0",
-    "@fortawesome/free-brands-svg-icons": "^6.3.0",
-    "@fortawesome/free-regular-svg-icons": "^6.3.0",
-    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/vue-fontawesome": "^3.0.3",
-    "@supabase/supabase-js": "^2.12.0",
-    "@tanstack/vue-query": "^4.27.0",
-    "@vueuse/core": "^9.13.0",
+    "@supabase/supabase-js": "^2.22.0",
+    "@tanstack/vue-query": "^4.29.7",
+    "@vueuse/core": "^10.1.2",
     "d3-color": "^3.1.0",
-    "element-plus": "^2.3.1",
+    "element-plus": "^2.3.5",
     "lodash": "^4.17.21"
   }
 }
