--- a/apps/blog-new/package.json
+++ b/apps/blog-new/package.json
@@ -5,7 +5,8 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "sync:content": "node scripts/syncContent.js"
   },
   "devDependencies": {
     "@nuxt/content": "^2.6.0",
