--- a/apps/blog-new/package.json
+++ b/apps/blog-new/package.json
@@ -1,25 +1,43 @@
 {
   "name": "icebreaker-blog-nuxt3",
-  "private": true,
+  "private": false,
+  "version": "0.6.5",
+  "main": "nuxt.config.ts",
+  "license": "MIT",
   "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare",
-    "sync:content": "node scripts/syncContent.js"
-  },
-  "devDependencies": {
-    "@nuxt/content": "^2.6.0",
-    "@nuxt/eslint-config": "^0.1.1",
-    "@nuxtjs/eslint-module": "^4.1.0",
-    "@nuxtjs/tailwindcss": "^6.7.0",
-    "@pinia/nuxt": "^0.4.11",
-    "content-wind": "latest",
-    "eslint": "^8.41.0",
-    "nuxt": "3.5.1"
+    "dev": "nuxi dev",
+    "build": "nuxi build",
+    "generate": "nuxi generate",
+    "preview": "nuxi preview",
+    "lint": "eslint .",
+    "prepublishOnly": "pnpm lint",
+    "release": "release-it"
   },
   "dependencies": {
-    "pinia": "^2.1.3"
+    "@nuxt-themes/elements": "^0.9.4",
+    "@nuxt-themes/tokens": "^1.9.1",
+    "@nuxt-themes/typography": "^0.11.0",
+    "@nuxt/content": "^2.6.0",
+    "@nuxtjs/color-mode": "^3.2.0",
+    "@nuxtjs/tailwindcss": "^6.7.0",
+    "nuxt-config-schema": "^0.4.6",
+    "nuxt-icon": "^0.4.1"
+  },
+  "devDependencies": {
+    "@nuxt/eslint-config": "^0.1.1",
+    "@types/node": "^20.2.5",
+    "eslint": "^8.41.0",
+    "nuxt": "^3.5.1",
+    "release-it": "^15.10.3",
+    "typescript": "^5.0.4"
+  },
+  "release-it": {
+    "git": {
+      "commitMessage": "chore(release): release v${version}"
+    },
+    "github": {
+      "release": true,
+      "releaseName": "v${version}"
+    }
   }
 }
