--- a/apps/blog-new/package.json
+++ b/apps/blog-new/package.json
@@ -9,6 +9,7 @@
     "build": "nuxi build",
     "generate": "nuxi generate",
     "preview": "nuxi preview",
+    "postinstall": "nuxt prepare",
     "lint": "eslint .",
     "prepublishOnly": "pnpm lint",
     "release": "release-it"
@@ -20,6 +21,7 @@
     "@nuxt/content": "^2.6.0",
     "@nuxtjs/color-mode": "^3.2.0",
     "@nuxtjs/tailwindcss": "^6.7.0",
+    "daisyui": "^2.51.6",
     "nuxt-config-schema": "^0.4.6",
     "nuxt-icon": "^0.4.1"
   },
@@ -29,6 +31,7 @@
     "eslint": "^8.41.0",
     "nuxt": "^3.5.1",
     "release-it": "^15.10.3",
+    "sitemap": "^7.1.1",
     "typescript": "^5.0.4"
   },
   "release-it": {
