--- a/apps/supabase-vue-3/package.json
+++ b/apps/supabase-vue-3/package.json
@@ -10,47 +10,48 @@
     "deploy": "node scripts/deploy.cjs"
   },
   "dependencies": {
-    "@element-plus/icons-vue": "^2.0.10",
-    "@fortawesome/fontawesome-svg-core": "^6.2.1",
-    "@fortawesome/free-brands-svg-icons": "^6.2.1",
-    "@fortawesome/free-regular-svg-icons": "^6.2.1",
-    "@fortawesome/free-solid-svg-icons": "^6.2.1",
-    "@fortawesome/vue-fontawesome": "^3.0.1",
-    "@supabase/supabase-js": "^2.2.3",
-    "@tanstack/vue-query": "^4.20.9",
-    "@vant/use": "^1.4.4",
-    "@vueuse/components": "^9.10.0",
-    "@vueuse/core": "^9.10.0",
-    "@vueuse/integrations": "^9.10.0",
-    "axios": "^1.2.2",
-    "element-plus": "^2.2.28",
-    "js-cookie": "^3.0.1",
-    "nanoid": "^4.0.0",
+    "@element-plus/icons-vue": "^2.1.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/vue-fontawesome": "^3.0.3",
+    "@supabase/supabase-js": "^2.23.0",
+    "@tanstack/vue-query": "^4.29.11",
+    "@vant/use": "^1.5.1",
+    "@vueuse/components": "^10.1.2",
+    "@vueuse/core": "^10.1.2",
+    "@vueuse/integrations": "^10.1.2",
+    "axios": "^1.4.0",
+    "element-plus": "^2.3.5",
+    "js-cookie": "^3.0.5",
+    "nanoid": "^4.0.2",
     "path-browserify": "^1.0.1",
-    "pinia": "^2.0.28",
-    "swiper": "^8.4.5",
-    "validator": "^13.7.0",
-    "vue": "^3.2.45",
-    "vue-router": "^4.1.6"
+    "pinia": "^2.1.3",
+    "pinia-plugin-persistedstate": "^3.1.0",
+    "swiper": "^9.3.2",
+    "validator": "^13.9.0",
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.1"
   },
   "devDependencies": {
-    "@icebreakers/deploy": "^0.1.1",
-    "@tailwindcss/typography": "^0.5.8",
-    "@types/js-cookie": "^3.0.2",
+    "@icebreakers/deploy": "^0.1.4",
+    "@tailwindcss/typography": "^0.5.9",
+    "@types/js-cookie": "^3.0.3",
     "@types/path-browserify": "^1.0.0",
-    "@types/validator": "^13.7.10",
-    "@vitejs/plugin-vue": "^4.0.0",
-    "@vitejs/plugin-vue-jsx": "^3.0.0",
-    "postcss": "^8.4.21",
+    "@types/validator": "^13.7.17",
+    "@vitejs/plugin-vue": "^4.2.3",
+    "@vitejs/plugin-vue-jsx": "^3.0.1",
+    "postcss": "^8.4.24",
     "postcss-scss": "^4.0.6",
-    "sass": "^1.57.1",
+    "sass": "^1.62.1",
     "tailwind-css-variables-theme-generator": "^0.3.8",
-    "tailwindcss": "^3.2.4",
-    "typescript": "^4.9.4",
-    "unplugin-auto-import": "^0.12.1",
-    "unplugin-icons": "^0.15.1",
-    "unplugin-vue-components": "^0.22.12",
-    "vite": "^4.0.4",
-    "vue-tsc": "^1.0.22"
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.0.4",
+    "unplugin-auto-import": "^0.16.2",
+    "unplugin-icons": "^0.16.1",
+    "unplugin-vue-components": "^0.24.1",
+    "vite": "^4.3.9",
+    "vue-tsc": "^1.6.5"
   }
 }
