--- a/apps/supabase-vue-3/package.json
+++ b/apps/supabase-vue-3/package.json
@@ -42,6 +42,7 @@
     "@types/validator": "^13.7.17",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vitejs/plugin-vue-jsx": "^3.0.1",
+    "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
     "postcss-scss": "^4.0.6",
     "sass": "^1.62.1",
