--- a/apps/blog-new/package.json
+++ b/apps/blog-new/package.json
@@ -22,7 +22,9 @@
     "@nuxt/content": "^2.6.0",
     "@nuxtjs/color-mode": "^3.2.0",
     "@nuxtjs/tailwindcss": "^6.7.0",
+    "@vueuse/core": "^10.1.2",
     "daisyui": "^2.51.6",
+    "dayjs": "^1.11.7",
     "nuxt-config-schema": "^0.4.6",
     "nuxt-icon": "^0.4.1"
   },
