--- a/packages/@som/blog/package.json
+++ b/packages/@som/blog/package.json
@@ -88,6 +88,7 @@
     "@vue/composition-api": "^1.7.1",
     "babel-loader": "^8.2.5",
     "babel-plugin-component": "^1.1.1",
+    "babel-plugin-dynamic-import-node": "^2.3.3",
     "babel-plugin-import": "^1.13.6",
     "cli-progress": "^3.12.0",
     "cos-nodejs-sdk-v5": "^2.12.1",
