--- a/packages/@som/blog/package.json
+++ b/packages/@som/blog/package.json
@@ -58,7 +58,7 @@
     "lodash": "^4.17.21",
     "marked": "^4.3.0",
     "md2cwm": "^1.0.4",
-    "nuxt": "2.15.8",
+    "nuxt": "^2.16.3",
     "qrcode": "^1.5.3",
     "sitemap": "^7.1.1",
     "svg4everybody": "^2.1.9",
@@ -77,7 +77,6 @@
     "@babel/plugin-transform-runtime": "^7.22.4",
     "@babel/preset-env": "^7.22.4",
     "@icebreakers/deploy": "^0.1.4",
-    "@nuxt/postcss8": "^1.1.3",
     "@nuxt/types": "^2.16.3",
     "@nuxtjs/composition-api": "^0.33.1",
     "@nuxtjs/eslint-config": "^12.0.0",
@@ -121,5 +120,10 @@
     "tailwindcss": "^3.3.2",
     "tencentcloud-sdk-nodejs": "^4.0.609",
     "worker-loader": "^3.0.8"
+  },
+  "resolutions": {
+    "vue": "^2.7",
+    "vue-template-compiler": "^2.7",
+    "vue-server-renderer": "^2.7"
   }
 }
