--- a/package.json
+++ b/package.json
@@ -34,23 +34,8 @@
     "sync:article": "cd packages/@som/blog && npm run sync"
   },
   "devDependencies": {
-    "@types/prettier": "^2.7.0",
-    "@typescript-eslint/eslint-plugin": "^5.34.0",
-    "@typescript-eslint/parser": "^5.34.0",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.1",
-    "eslint": "8.24.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-n": "15.3.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-promise": "6.0.1",
-    "eslint-plugin-vue": "^9.4.0",
-    "execa": "^5.0.0",
-    "prettier": "^2.6.2",
-    "prettier-plugin-tailwindcss": "^0.1.13",
-    "turbo": "^1.4.3",
-    "typescript": "^4.7.4"
+    "execa": "^5.0.0"
   }
 }
