--- a/apps/blog-new/tsconfig.json
+++ b/apps/blog-new/tsconfig.json
@@ -1,5 +1,9 @@
 {
   // https://v3.nuxtjs.org/concepts/typescript
   "extends": "./.nuxt/tsconfig.json",
-  "exclude": []
+  "exclude": [
+    "node_modules",
+    ".nuxt",
+    "content"
+  ]
 }
