chore: no yarn workspaces

--- a/apps/blog-new/tsconfig.json
+++ b/apps/blog-new/tsconfig.json
@@ -2,8 +2,7 @@
   // https://v3.nuxtjs.org/concepts/typescript
   "extends": "./.nuxt/tsconfig.json",
   "exclude": [
-    "node_modules",
-    ".nuxt",
-    "content"
+    "../dist",
+    "../.output"
   ]
 }
