--- a/apps/blog-new/package.json
+++ b/apps/blog-new/package.json
@@ -38,16 +38,8 @@
     "@types/node": "^20.2.5",
     "eslint": "^8.42.0",
     "nuxt": "^3.5.2",
+    "sass": "^1.62.1",
     "sitemap": "^7.1.1",
     "typescript": "^5.1.3"
-  },
-  "release-it": {
-    "git": {
-      "commitMessage": "chore(release): release v${version}"
-    },
-    "github": {
-      "release": true,
-      "releaseName": "v${version}"
-    }
   }
 }
