--- a/apps/blog-new/package.json
+++ b/apps/blog-new/package.json
@@ -36,8 +36,13 @@
     "@nuxt/eslint-config": "^0.1.1",
     "@types/lodash-es": "^4.17.7",
     "@types/node": "^20.2.5",
+    "@types/prettier": "^2.7.3",
     "eslint": "^8.42.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "nuxt": "^3.5.2",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.3.0",
     "sass": "^1.62.1",
     "sitemap": "^7.1.1",
     "typescript": "^5.1.3"
