--- a/package.json
+++ b/package.json
@@ -66,5 +66,17 @@
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org"
+  },
+  "pnpm": {
+    "overrides": {
+      "vue": "^2.7",
+      "vue-server-renderer": "^2.7",
+      "vue-template-compiler": "^2.7"
+    }
+  },
+  "resolutions": {
+    "vue": "^2.7",
+    "vue-server-renderer": "^2.7",
+    "vue-template-compiler": "^2.7"
   }
 }
