chore: push starte

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "0.0.0",
   "private": true,
-  "packageManager": "pnpm@10.5.2",
+  "packageManager": "pnpm@10.12.1",
   "engines": {
     "node": ">=20.0.0"
   },
@@ -42,7 +42,7 @@
     "@types/micromatch": "^4.0.9",
     "@types/node": "^22.15.30",
     "@types/set-value": "^4.0.3",
-    "@vitest/coverage-v8": "~3.2.2",
+    "@vitest/coverage-v8": "~3.2.3",
     "ci-info": "^4.2.0",
     "cross-env": "^7.0.3",
     "defu": "^6.1.4",
@@ -64,10 +64,11 @@
     "set-value": "^4.1.0",
     "tslib": "^2.8.1",
     "tsup": "^8.5.0",
-    "tsx": "^4.19.4",
+    "tsx": "^4.20.2",
     "turbo": "^2.5.4",
     "typescript": "^5.8.3",
-    "vitest": "~3.2.2",
+    "vitest": "~3.2.3",
+    "wrangler": "^4.19.2",
     "yaml": "^2.8.0"
   },
   "publishConfig": {
